[package]
name = "rdnsx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fast and multi-purpose DNS toolkit - CLI"
default-run = "rdnsx"

[[bin]]
name = "rdnsx"
path = "src/main.rs"

[dependencies]
# Core library
rdnsx-core = { path = "../rdnsx-core" }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
